<resources>
    <string name="app_name">Student Form</string>
    <string name="cpf_label">CPF</string>
    <string name="rg_label">RG</string>
    <string name="name_label">Nome Completo</string>
    <string name="phone_label">Telefone</string>
    <string name="city_label">Cidade</string>
    <string name="state_label">Estado</string>
    <string name="address_label">Endereço</string>
    <string name="university_name">Universidade</string>
    <string name="course">Curso</string>
</resources>